load("@rules_cc//cc:defs.bzl", "cc_test")

# cc_test(
#     name = "boost.test.test",
#     srcs = glob([
#         "**/*.hpp",
#         "**/*.h",
#         "**/*.cpp",
#     ]),
#     deps = [
#         "@boost.bind",
#         "@boost.config",
#         "@boost.core",
#         "@boost.exception",
#         "@boost.iterator",
#         "@boost.lexical_cast",
#         "@boost.mpl",
#         "@boost.multiprecision",
#         "@boost.smart_ptr",
#         "@boost.test",
#         "@boost.thread",
#         "@boost.throw_exception",
#         "@boost.type_traits",
#     ],
# )
