module(name = "boost.test.test")

bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "boost.bind", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.config", version = "1.83.0.bzl.6")
bazel_dep(name = "boost.core", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.exception", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.iterator", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.lexical_cast", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.mpl", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.multiprecision", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.smart_ptr", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.test")
bazel_dep(name = "boost.thread", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.throw_exception", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.type_traits", version = "1.83.0.bzl.1")

local_path_override(
    module_name = "boost.test",
    path = "..",
)
